--- a/Pytorch/08_国产芯片适配实战.md
+++ b/Pytorch/08_国产芯片适配实战.md
@@ -1,6 +1,6 @@
 # 第八章：国产芯片适配实战指南
 
-## 🎯 本章目标
+## 本章目标
 
 - 理解 torch.compile 适配国产芯片的完整流程
 - 掌握自定义后端开发的方法
@@ -13,37 +13,40 @@
 ### 1.1 适配的层次
 
 ```
-┌─────────────────────────────────────────────┐
-│  用户层：PyTorch 代码                        │
-│  model = torch.compile(model)               │
-└───────────────┬─────────────────────────────┘
-                ↓
-┌─────────────────────────────────────────────┐
-│  PyTorch 编译栈                             │
-│  ├─ Dynamo (图捕获)                         │
-│  ├─ AOTAutograd (自动微分)                  │
-│  └─ TorchFX (图表示)                        │
-└───────────────┬─────────────────────────────┘
-                ↓
-┌─────────────────────────────────────────────┐
-│  自定义后端 (本章重点)                       │ ← 你需要实现这部分
-│  - 接收 FX Graph                            │
-│  - 转换为芯片指令                           │
-│  - 执行优化                                 │
-└───────────────┬─────────────────────────────┘
-                ↓
-┌─────────────────────────────────────────────┐
-│  芯片层：算子库 + 运行时                     │
-│  - 算子实现 (矩阵乘法、卷积等)               │
-│  - 内存管理                                 │
-│  - 设备管理                                 │
-└─────────────────────────────────────────────┘
++---------------------------------------------+
+| 用户层：PyTorch 代码 |
+| model = torch.compile(model) |
+|---------------+-----------------------------+
+
+
++---------------------------------------------+
+| PyTorch 编译栈 |
+| |- Dynamo (图捕获) |
+| |- AOTAutograd (自动微分) |
+| |- TorchFX (图表示) |
+|---------------+-----------------------------+
+
+
++---------------------------------------------+
+| 自定义后端 (本章重点) | <- 你需要实现这部分
+| - 接收 FX Graph |
+| - 转换为芯片指令 |
+| - 执行优化 |
+|---------------+-----------------------------+
+
+
++---------------------------------------------+
+| 芯片层：算子库 + 运行时 |
+| - 算子实现 (矩阵乘法、卷积等) |
+| - 内存管理 |
+| - 设备管理 |
+|---------------------------------------------+
 ```
 
 ### 1.2 三种适配方式
 
 | 方式 | 难度 | 性能 | 适用场景 |
-|------|-----|------|---------|
+| ------ | ----- | ------ | --------- |
 | **方式 1：Dispatcher 层** | 低 | 中 | 快速原型，少量算子 |
 | **方式 2：自定义编译器后端** | 中 | 高 | 完整的编译优化 |
 | **方式 3：Inductor 后端** | 高 | 最高 | 深度集成 PyTorch |
@@ -80,10 +83,10 @@ constexpr c10::DeviceType NPU = c10::DeviceType::PrivateUse1;
 // 设备管理
 class NPUDevice {
 public:
-    static void init();
-    static int device_count();
-    static void set_device(int device_id);
-    static int current_device();
+static void init();
+static int device_count();
+static void set_device(int device_id);
+static int current_device();
 };
 
 } // namespace npu
@@ -95,25 +98,25 @@ public:
 // npu_backend/csrc/Device.cpp
 
 #include "Device.h"
-#include "npu_driver.h"  // 假设这是芯片厂商提供的驱动 API
+#include "npu_driver.h" // 假设这是芯片厂商提供的驱动 API
 
 namespace npu {
 
 void NPUDevice::init() {
-    // 调用芯片驱动初始化
-    npu_driver::initialize();
+// 调用芯片驱动初始化
+npu_driver::initialize();
 }
 
 int NPUDevice::device_count() {
-    return npu_driver::get_device_count();
+return npu_driver::get_device_count();
 }
 
 void NPUDevice::set_device(int device_id) {
-    npu_driver::set_current_device(device_id);
+npu_driver::set_current_device(device_id);
 }
 
 int NPUDevice::current_device() {
-    return npu_driver::get_current_device();
+return npu_driver::get_current_device();
 }
 
 } // namespace npu
@@ -131,60 +134,60 @@ namespace npu {
 
 // NPU 上的加法实现
 torch::Tensor add_npu(
-    const torch::Tensor& self,
-    const torch::Tensor& other,
-    const torch::Scalar& alpha
+const torch::Tensor& self,
+const torch::Tensor& other,
+const torch::Scalar& alpha
 ) {
-    // 1. 分配输出 tensor
-    auto result = torch::empty_like(self);
-    
-    // 2. 获取数据指针
-    void* self_ptr = self.data_ptr();
-    void* other_ptr = other.data_ptr();
-    void* result_ptr = result.data_ptr();
-    
-    // 3. 调用 NPU 驱动的加法 API
-    npu_driver::add(
-        result_ptr,
-        self_ptr,
-        other_ptr,
-        alpha.toDouble(),
-        self.numel()
-    );
-    
-    return result;
+// 1. 分配输出 tensor
+auto result = torch::empty_like(self);
+
+// 2. 获取数据指针
+void* self_ptr = self.data_ptr();
+void* other_ptr = other.data_ptr();
+void* result_ptr = result.data_ptr();
+
+// 3. 调用 NPU 驱动的加法 API
+npu_driver::add(
+result_ptr,
+self_ptr,
+other_ptr,
+alpha.toDouble(),
+self.numel()
+);
+
+return result;
 }
 
 // 矩阵乘法
 torch::Tensor mm_npu(
-    const torch::Tensor& self,
-    const torch::Tensor& other
+const torch::Tensor& self,
+const torch::Tensor& other
 ) {
-    auto result = torch::empty({self.size(0), other.size(1)}, self.options());
-    
-    npu_driver::matmul(
-        result.data_ptr(),
-        self.data_ptr(),
-        other.data_ptr(),
-        self.size(0),
-        self.size(1),
-        other.size(1)
-    );
-    
-    return result;
+auto result = torch::empty({self.size(0), other.size(1)}, self.options());
+
+npu_driver::matmul(
+result.data_ptr(),
+self.data_ptr(),
+other.data_ptr(),
+self.size(0),
+self.size(1),
+other.size(1)
+);
+
+return result;
 }
 
 // ReLU
 torch::Tensor relu_npu(const torch::Tensor& self) {
-    auto result = torch::empty_like(self);
-    
-    npu_driver::relu(
-        result.data_ptr(),
-        self.data_ptr(),
-        self.numel()
-    );
-    
-    return result;
+auto result = torch::empty_like(self);
+
+npu_driver::relu(
+result.data_ptr(),
+self.data_ptr(),
+self.numel()
+);
+
+return result;
 }
 
 } // namespace npu
@@ -200,19 +203,19 @@ torch::Tensor relu_npu(const torch::Tensor& self) {
 
 // 使用 PrivateUse1 作为 NPU 的 DispatchKey
 TORCH_LIBRARY_IMPL(aten, PrivateUse1, m) {
-    // 注册加法
-    m.impl("add.Tensor", &npu::add_npu);
-    
-    // 注册矩阵乘法
-    m.impl("mm", &npu::mm_npu);
-    
-    // 注册 ReLU
-    m.impl("relu", &npu::relu_npu);
-    
-    // 注册更多算子...
-    m.impl("mul.Tensor", &npu::mul_npu);
-    m.impl("conv2d", &npu::conv2d_npu);
-    // ... 根据需求注册
+// 注册加法
+m.impl("add.Tensor", &npu::add_npu);
+
+// 注册矩阵乘法
+m.impl("mm", &npu::mm_npu);
+
+// 注册 ReLU
+m.impl("relu", &npu::relu_npu);
+
+// 注册更多算子...
+m.impl("mul.Tensor", &npu::mul_npu);
+m.impl("conv2d", &npu::conv2d_npu);
+// ... 根据需求注册
 }
 ```
 
@@ -226,15 +229,15 @@ from torch.utils.cpp_extension import load
 
 # 加载 C++ 扩展
 _C = load(
-    name='torch_npu',
-    sources=[
-        'csrc/Device.cpp',
-        'csrc/ops/Add.cpp',
-        'csrc/Register.cpp',
-        # ... 其他源文件
-    ],
-    extra_include_paths=['path/to/npu/driver/include'],
-    extra_ldflags=['-lnpu_driver'],  # 链接 NPU 驱动库
+name='torch_npu',
+sources=[
+'csrc/Device.cpp',
+'csrc/ops/Add.cpp',
+'csrc/Register.cpp',
+# ... 其他源文件
+],
+extra_include_paths=['path/to/npu/driver/include'],
+extra_ldflags=['-lnpu_driver'], # 链接 NPU 驱动库
 )
 
 # 初始化 NPU
@@ -245,13 +248,13 @@ torch.utils.rename_privateuse1_backend("npu")
 
 # 暴露设备管理 API
 def device_count():
-    return _C.npu_device_count()
+return _C.npu_device_count()
 
 def set_device(device_id):
-    _C.npu_set_device(device_id)
+_C.npu_set_device(device_id)
 
 def current_device():
-    return _C.npu_current_device()
+return _C.npu_current_device()
 
 # 支持 torch.device('npu')
 torch._register_device_module('npu', __name__)
@@ -273,17 +276,17 @@ x = torch.randn(100, 100, device='npu')
 y = torch.randn(100, 100, device='npu')
 
 # 自动调用 add_npu
-z = x + y  # ← 自动分发到 NPU kernel
+z = x + y # <- 自动分发到 NPU kernel
 
 # 矩阵乘法
-result = torch.mm(x, y)  # ← 调用 mm_npu
+result = torch.mm(x, y) # <- 调用 mm_npu
 
 # 使用 torch.compile
 model = MyModel().to('npu')
 compiled_model = torch.compile(model)
 
 input_data = torch.randn(32, 128, device='npu')
-output = compiled_model(input_data)  # 全部在 NPU 上运行
+output = compiled_model(input_data) # 全部在 NPU 上运行
 ```
 
 ### 2.3 需要实现的核心算子清单
@@ -343,148 +346,148 @@ from typing import List
 
 @register_backend
 def my_npu_backend(gm: GraphModule, example_inputs: List[torch.Tensor]):
-    """
-    自定义 NPU 编译后端
-    
-    参数:
-        gm: TorchFX GraphModule（前向图）
-        example_inputs: 示例输入
-    
-    返回:
-        编译后的可调用对象
-    """
-    
-    # 1. 图分析和优化
-    optimized_gm = optimize_graph(gm)
-    
-    # 2. 代码生成
-    npu_code = generate_npu_code(optimized_gm)
-    
-    # 3. 编译和加载
-    compiled_fn = compile_and_load(npu_code)
-    
-    return compiled_fn
+"""
+自定义 NPU 编译后端
+
+参数:
+gm: TorchFX GraphModule（前向图）
+example_inputs: 示例输入
+
+返回:
+编译后的可调用对象
+"""
+
+# 1. 图分析和优化
+optimized_gm = optimize_graph(gm)
+
+# 2. 代码生成
+npu_code = generate_npu_code(optimized_gm)
+
+# 3. 编译和加载
+compiled_fn = compile_and_load(npu_code)
+
+return compiled_fn
 
 def optimize_graph(gm: GraphModule) -> GraphModule:
-    """优化计算图"""
-    
-    # 算子融合
-    gm = fuse_operations(gm)
-    
-    # 常量折叠
-    gm = constant_folding(gm)
-    
-    # 死代码消除
-    gm = dead_code_elimination(gm)
-    
-    return gm
+"""优化计算图"""
+
+# 算子融合
+gm = fuse_operations(gm)
+
+# 常量折叠
+gm = constant_folding(gm)
+
+# 死代码消除
+gm = dead_code_elimination(gm)
+
+return gm
 
 def fuse_operations(gm: GraphModule) -> GraphModule:
-    """算子融合"""
-    
-    # 示例：融合 matmul + add → addmm
-    for node in gm.graph.nodes:
-        if node.op == 'call_function' and node.target == torch.add:
-            # 检查输入是否来自 matmul
-            if len(node.args) > 0 and node.args[0].target == torch.matmul:
-                # 融合为 addmm
-                matmul_node = node.args[0]
-                bias = node.args[1]
-                
-                with gm.graph.inserting_after(matmul_node):
-                    # 创建 addmm 节点
-                    addmm_node = gm.graph.call_function(
-                        torch.addmm,
-                        args=(bias, matmul_node.args[0], matmul_node.args[1])
-                    )
-                
-                # 替换原节点
-                node.replace_all_uses_with(addmm_node)
-                gm.graph.erase_node(node)
-                gm.graph.erase_node(matmul_node)
-    
-    gm.recompile()
-    return gm
+"""算子融合"""
+
+# 示例：融合 matmul + add -> addmm
+for node in gm.graph.nodes:
+if node.op == 'call_function' and node.target == torch.add:
+# 检查输入是否来自 matmul
+if len(node.args) > 0 and node.args[0].target == torch.matmul:
+# 融合为 addmm
+matmul_node = node.args[0]
+bias = node.args[1]
+
+with gm.graph.inserting_after(matmul_node):
+# 创建 addmm 节点
+addmm_node = gm.graph.call_function(
+torch.addmm,
+args=(bias, matmul_node.args[0], matmul_node.args[1])
+)
+
+# 替换原节点
+node.replace_all_uses_with(addmm_node)
+gm.graph.erase_node(node)
+gm.graph.erase_node(matmul_node)
+
+gm.recompile()
+return gm
 
 def generate_npu_code(gm: GraphModule) -> str:
-    """
-    生成 NPU 代码
-    
-    可以生成：
-    - C++ 代码（调用 NPU 驱动）
-    - NPU 汇编代码
-    - NPU 中间表示
-    """
-    
-    code_lines = []
-    code_lines.append("// Generated NPU code")
-    code_lines.append("#include <npu_runtime.h>")
-    code_lines.append("")
-    code_lines.append("void compiled_kernel(float* inputs[], float* outputs[]) {")
-    
-    # 遍历图节点
-    for node in gm.graph.nodes:
-        if node.op == 'call_function':
-            # 生成对应的 NPU 调用
-            if node.target == torch.add:
-                code_lines.append(f"    npu_add(outputs[{node.name}], "
-                                f"inputs[{node.args[0].name}], "
-                                f"inputs[{node.args[1].name}]);")
-            
-            elif node.target == torch.mm:
-                code_lines.append(f"    npu_matmul(outputs[{node.name}], "
-                                f"inputs[{node.args[0].name}], "
-                                f"inputs[{node.args[1].name}]);")
-            
-            # ... 更多算子
-    
-    code_lines.append("}")
-    
-    return "\n".join(code_lines)
+"""
+生成 NPU 代码
+
+可以生成：
+- C++ 代码（调用 NPU 驱动）
+- NPU 汇编代码
+- NPU 中间表示
+"""
+
+code_lines = []
+code_lines.append("// Generated NPU code")
+code_lines.append("#include <npu_runtime.h>")
+code_lines.append("")
+code_lines.append("void compiled_kernel(float* inputs[], float* outputs[]) {")
+
+# 遍历图节点
+for node in gm.graph.nodes:
+if node.op == 'call_function':
+# 生成对应的 NPU 调用
+if node.target == torch.add:
+code_lines.append(f" npu_add(outputs[{node.name}], "
+f"inputs[{node.args[0].name}], "
+f"inputs[{node.args[1].name}]);")
+
+elif node.target == torch.mm:
+code_lines.append(f" npu_matmul(outputs[{node.name}], "
+f"inputs[{node.args[0].name}], "
+f"inputs[{node.args[1].name}]);")
+
+# ... 更多算子
+
+code_lines.append("}")
+
+return "\n".join(code_lines)
 
 def compile_and_load(code: str):
-    """
-    编译 NPU 代码并加载
-    """
-    
-    # 1. 写入临时文件
-    import tempfile
-    import subprocess
-    
-    with tempfile.NamedTemporaryFile(mode='w', suffix='.cpp', delete=False) as f:
-        f.write(code)
-        cpp_file = f.name
-    
-    # 2. 编译
-    so_file = cpp_file.replace('.cpp', '.so')
-    subprocess.run([
-        'g++',
-        '-shared',
-        '-fPIC',
-        cpp_file,
-        '-o', so_file,
-        '-I/path/to/npu/include',
-        '-L/path/to/npu/lib',
-        '-lnpu_runtime'
-    ], check=True)
-    
-    # 3. 加载
-    import ctypes
-    lib = ctypes.CDLL(so_file)
-    
-    # 4. 包装为 Python 可调用对象
-    def wrapper(*inputs):
-        # 调用编译后的函数
-        return lib.compiled_kernel(*inputs)
-    
-    return wrapper
+"""
+编译 NPU 代码并加载
+"""
+
+# 1. 写入临时文件
+import tempfile
+import subprocess
+
+with tempfile.NamedTemporaryFile(mode='w', suffix='.cpp', delete=False) as f:
+f.write(code)
+cpp_file = f.name
+
+# 2. 编译
+so_file = cpp_file.replace('.cpp', '.so')
+subprocess.run([
+'g++',
+'-shared',
+'-fPIC',
+cpp_file,
+'-o', so_file,
+'-I/path/to/npu/include',
+'-L/path/to/npu/lib',
+'-lnpu_runtime'
+], check=True)
+
+# 3. 加载
+import ctypes
+lib = ctypes.CDLL(so_file)
+
+# 4. 包装为 Python 可调用对象
+def wrapper(*inputs):
+# 调用编译后的函数
+return lib.compiled_kernel(*inputs)
+
+return wrapper
 ```
 
 ### 3.2 使用自定义后端
 
 ```python
 import torch
-import my_npu_backend  # 导入后自动注册
+import my_npu_backend # 导入后自动注册
 
 # 使用自定义后端
 model = MyModel()
@@ -506,27 +509,27 @@ from torch._inductor.codegen.wrapper import WrapperCodeGen
 from torch._inductor.codegen.common import CodeGen
 
 class NPUCodeGen(CodeGen):
-    """NPU 代码生成器"""
-    
-    def __init__(self):
-        super().__init__()
-        self.npu_headers = ['#include <npu_kernel.h>']
-    
-    def codegen_tensor_item(self, node):
-        """生成 NPU kernel 调用"""
-        if node.target == 'add':
-            return f"npu_add({node.args[0]}, {node.args[1]})"
-        elif node.target == 'matmul':
-            return f"npu_matmul({node.args[0]}, {node.args[1]})"
-        # ... 更多算子
-    
-    def generate_kernel(self, kernel_name, kernel_body):
-        """生成完整的 NPU kernel"""
-        return f"""
-        __npu_kernel__ void {kernel_name}(...) {{
-            {kernel_body}
-        }}
-        """
+"""NPU 代码生成器"""
+
+def __init__(self):
+super().__init__()
+self.npu_headers = ['#include <npu_kernel.h>']
+
+def codegen_tensor_item(self, node):
+"""生成 NPU kernel 调用"""
+if node.target == 'add':
+return f"npu_add({node.args[0]}, {node.args[1]})"
+elif node.target == 'matmul':
+return f"npu_matmul({node.args[0]}, {node.args[1]})"
+# ... 更多算子
+
+def generate_kernel(self, kernel_name, kernel_body):
+"""生成完整的 NPU kernel"""
+return f"""
+__npu_kernel__ void {kernel_name}(...) {{
+{kernel_body}
+}}
+"""
 
 # 注册 NPU 后端到 Inductor
 config.cpp.enable_npu = True
@@ -542,88 +545,88 @@ from torch.fx import GraphModule
 import torch.fx as fx
 
 class NPUFusionPass:
-    """NPU 特定的算子融合 Pass"""
-    
-    def __init__(self):
-        # 定义融合模式
-        self.fusion_patterns = [
-            # Conv + BN + ReLU
-            (
-                ['conv2d', 'batch_norm', 'relu'],
-                'conv_bn_relu_fused'
-            ),
-            # Linear + ReLU
-            (
-                ['linear', 'relu'],
-                'linear_relu_fused'
-            ),
-            # MatMul + Add (addmm)
-            (
-                ['matmul', 'add'],
-                'addmm'
-            ),
-        ]
-    
-    def run(self, gm: GraphModule) -> GraphModule:
-        """执行融合优化"""
-        
-        for pattern, fused_op in self.fusion_patterns:
-            gm = self.fuse_pattern(gm, pattern, fused_op)
-        
-        return gm
-    
-    def fuse_pattern(self, gm, pattern, fused_op):
-        """融合特定模式"""
-        
-        graph = gm.graph
-        matches = self.find_pattern_matches(graph, pattern)
-        
-        for match in matches:
-            # 创建融合节点
-            with graph.inserting_after(match[-1]):
-                fused_node = graph.call_function(
-                    getattr(torch.ops.npu, fused_op),
-                    args=self.collect_args(match)
-                )
-            
-            # 替换原节点
-            match[-1].replace_all_uses_with(fused_node)
-            for node in match:
-                graph.erase_node(node)
-        
-        gm.recompile()
-        return gm
+"""NPU 特定的算子融合 Pass"""
+
+def __init__(self):
+# 定义融合模式
+self.fusion_patterns = [
+# Conv + BN + ReLU
+(
+['conv2d', 'batch_norm', 'relu'],
+'conv_bn_relu_fused'
+),
+# Linear + ReLU
+(
+['linear', 'relu'],
+'linear_relu_fused'
+),
+# MatMul + Add (addmm)
+(
+['matmul', 'add'],
+'addmm'
+),
+]
+
+def run(self, gm: GraphModule) -> GraphModule:
+"""执行融合优化"""
+
+for pattern, fused_op in self.fusion_patterns:
+gm = self.fuse_pattern(gm, pattern, fused_op)
+
+return gm
+
+def fuse_pattern(self, gm, pattern, fused_op):
+"""融合特定模式"""
+
+graph = gm.graph
+matches = self.find_pattern_matches(graph, pattern)
+
+for match in matches:
+# 创建融合节点
+with graph.inserting_after(match[-1]):
+fused_node = graph.call_function(
+getattr(torch.ops.npu, fused_op),
+args=self.collect_args(match)
+)
+
+# 替换原节点
+match[-1].replace_all_uses_with(fused_node)
+for node in match:
+graph.erase_node(node)
+
+gm.recompile()
+return gm
 ```
 
 ### 5.2 内存布局优化
 
 ```python
 class NPUMemoryLayoutOptimizer:
-    """优化 tensor 的内存布局以适应 NPU"""
-    
-    def optimize(self, gm: GraphModule) -> GraphModule:
-        """
-        NPU 可能偏好特定的内存布局：
-        - NHWC 而不是 NCHW (卷积)
-        - 连续内存
-        - 特定的对齐要求
-        """
-        
-        for node in gm.graph.nodes:
-            if node.op == 'call_function':
-                # 检查是否是卷积操作
-                if 'conv' in str(node.target):
-                    # 插入 layout 转换
-                    self.convert_to_nhwc(node, gm.graph)
-        
-        gm.recompile()
-        return gm
-    
-    def convert_to_nhwc(self, node, graph):
-        """转换为 NHWC 布局"""
-        # 在卷积前插入 permute
-        # 在卷积后插入 permute 转回
-        pass
+"""优化 tensor 的内存布局以适应 NPU"""
+
+def optimize(self, gm: GraphModule) -> GraphModule:
+"""
+NPU 可能偏好特定的内存布局：
+- NHWC 而不是 NCHW (卷积)
+- 连续内存
+- 特定的对齐要求
+"""
+
+for node in gm.graph.nodes:
+if node.op == 'call_function':
+# 检查是否是卷积操作
+if 'conv' in str(node.target):
+# 插入 layout 转换
+self.convert_to_nhwc(node, gm.graph)
+
+gm.recompile()
+return gm
+
+def convert_to_nhwc(self, node, graph):
+"""转换为 NHWC 布局"""
+# 在卷积前插入 permute
+# 在卷积后插入 permute 转回
+pass
 ```
 
 ## 6. 性能优化策略
@@ -632,82 +635,82 @@ class NPUMemoryLayoutOptimizer:
 
 ```python
 class NPUAutoTuner:
-    """自动调优 NPU kernel 参数"""
-    
-    def __init__(self):
-        self.cache = {}  # 缓存最优配置
-    
-    def tune_matmul(self, M, N, K):
-        """
-        调优矩阵乘法的参数：
-        - block size
-        - thread count
-        - memory tiling
-        """
-        
-        cache_key = (M, N, K)
-        if cache_key in self.cache:
-            return self.cache[cache_key]
-        
-        best_config = None
-        best_time = float('inf')
-        
-        # 尝试不同的配置
-        for block_size in [16, 32, 64, 128]:
-            for num_threads in [64, 128, 256]:
-                # 测试性能
-                time = self.benchmark_config(M, N, K, block_size, num_threads)
-                
-                if time < best_time:
-                    best_time = time
-                    best_config = (block_size, num_threads)
-        
-        self.cache[cache_key] = best_config
-        return best_config
-    
-    def benchmark_config(self, M, N, K, block_size, num_threads):
-        """基准测试特定配置"""
-        import time
-        
-        # 创建测试数据
-        x = torch.randn(M, K, device='npu')
-        y = torch.randn(K, N, device='npu')
-        
-        # 预热
-        for _ in range(10):
-            _ = torch.mm(x, y)
-        
-        # 测试
-        start = time.time()
-        for _ in range(100):
-            _ = torch.mm(x, y)
-        elapsed = time.time() - start
-        
-        return elapsed / 100
+"""自动调优 NPU kernel 参数"""
+
+def __init__(self):
+self.cache = {} # 缓存最优配置
+
+def tune_matmul(self, M, N, K):
+"""
+调优矩阵乘法的参数：
+- block size
+- thread count
+- memory tiling
+"""
+
+cache_key = (M, N, K)
+if cache_key in self.cache:
+return self.cache[cache_key]
+
+best_config = None
+best_time = float('inf')
+
+# 尝试不同的配置
+for block_size in [16, 32, 64, 128]:
+for num_threads in [64, 128, 256]:
+# 测试性能
+time = self.benchmark_config(M, N, K, block_size, num_threads)
+
+if time < best_time:
+best_time = time
+best_config = (block_size, num_threads)
+
+self.cache[cache_key] = best_config
+return best_config
+
+def benchmark_config(self, M, N, K, block_size, num_threads):
+"""基准测试特定配置"""
+import time
+
+# 创建测试数据
+x = torch.randn(M, K, device='npu')
+y = torch.randn(K, N, device='npu')
+
+# 预热
+for _ in range(10):
+_ = torch.mm(x, y)
+
+# 测试
+start = time.time()
+for _ in range(100):
+_ = torch.mm(x, y)
+elapsed = time.time() - start
+
+return elapsed / 100
 ```
 
 ### 6.2 批处理优化
 
 ```python
 class NPUBatchOptimizer:
-    """优化批处理操作"""
-    
-    def optimize_batch_operations(self, gm: GraphModule) -> GraphModule:
-        """
-        将多个小操作合并为批处理：
-        - 多个小的矩阵乘法 → 一个大的批矩阵乘法
-        - 多个独立的卷积 → 批卷积
-        """
-        
-        # 查找可以批处理的操作
-        matmul_nodes = self.find_parallel_matmuls(gm.graph)
-        
-        if len(matmul_nodes) > 1:
-            # 合并为 bmm (batch matrix multiply)
-            self.merge_to_bmm(gm.graph, matmul_nodes)
-        
-        gm.recompile()
-        return gm
+"""优化批处理操作"""
+
+def optimize_batch_operations(self, gm: GraphModule) -> GraphModule:
+"""
+将多个小操作合并为批处理：
+- 多个小的矩阵乘法 -> 一个大的批矩阵乘法
+- 多个独立的卷积 -> 批卷积
+"""
+
+# 查找可以批处理的操作
+matmul_nodes = self.find_parallel_matmuls(gm.graph)
+
+if len(matmul_nodes) > 1:
+# 合并为 bmm (batch matrix multiply)
+self.merge_to_bmm(gm.graph, matmul_nodes)
+
+gm.recompile()
+return gm
 ```
 
 ## 7. 完整示例：适配 NPU
@@ -716,29 +719,29 @@ class NPUBatchOptimizer:
 
 ```
 torch_npu/
-├── setup.py
-├── README.md
-├── torch_npu/
-│   ├── __init__.py
-│   ├── device.py
-│   └── compiler.py
-├── csrc/
-│   ├── Device.h
-│   ├── Device.cpp
-│   ├── ops/
-│   │   ├── Add.cpp
-│   │   ├── MatMul.cpp
-│   │   ├── Conv2d.cpp
-│   │   └── ...
-│   ├── Register.cpp
-│   └── NPUGuard.h
-├── tests/
-│   ├── test_basic_ops.py
-│   ├── test_nn_modules.py
-│   └── test_compile.py
-└── examples/
-    ├── resnet_npu.py
-    └── bert_npu.py
+|-- setup.py
+|-- README.md
+|-- torch_npu/
+| |-- __init__.py
+| |-- device.py
+| |-- compiler.py
+|-- csrc/
+| |-- Device.h
+| |-- Device.cpp
+| |-- ops/
+| | |-- Add.cpp
+| | |-- MatMul.cpp
+| | |-- Conv2d.cpp
+| | |-- ...
+| |-- Register.cpp
+| |-- NPUGuard.h
+|-- tests/
+| |-- test_basic_ops.py
+| |-- test_nn_modules.py
+| |-- test_compile.py
+|-- examples/
+|-- resnet_npu.py
+|-- bert_npu.py
 ```
 
 ### 7.2 setup.py
@@ -748,29 +751,29 @@ from setuptools import setup
 from torch.utils.cpp_extension import BuildExtension, CppExtension
 
 setup(
-    name='torch_npu',
-    version='0.1.0',
-    packages=['torch_npu'],
-    ext_modules=[
-        CppExtension(
-            name='torch_npu._C',
-            sources=[
-                'csrc/Device.cpp',
-                'csrc/ops/Add.cpp',
-                'csrc/ops/MatMul.cpp',
-                'csrc/Register.cpp',
-            ],
-            include_dirs=[
-                '/path/to/npu/driver/include',
-            ],
-            library_dirs=[
-                '/path/to/npu/driver/lib',
-            ],
-            libraries=['npu_driver'],
-            extra_compile_args=['-std=c++17'],
-        )
-    ],
-    cmdclass={'build_ext': BuildExtension},
+name='torch_npu',
+version='0.1.0',
+packages=['torch_npu'],
+ext_modules=[
+CppExtension(
+name='torch_npu._C',
+sources=[
+'csrc/Device.cpp',
+'csrc/ops/Add.cpp',
+'csrc/ops/MatMul.cpp',
+'csrc/Register.cpp',
+],
+include_dirs=[
+'/path/to/npu/driver/include',
+],
+library_dirs=[
+'/path/to/npu/driver/lib',
+],
+libraries=['npu_driver'],
+extra_compile_args=['-std=c++17'],
+)
+],
+cmdclass={'build_ext': BuildExtension},
 )
 ```
 
@@ -784,61 +787,61 @@ import torch_npu
 import pytest
 
 def test_add():
-    """测试加法操作"""
-    x = torch.randn(100, 100, device='npu')
-    y = torch.randn(100, 100, device='npu')
-    
-    z = x + y
-    
-    # 验证正确性（与 CPU 对比）
-    x_cpu = x.cpu()
-    y_cpu = y.cpu()
-    z_cpu = x_cpu + y_cpu
-    
-    torch.testing.assert_close(z.cpu(), z_cpu, rtol=1e-5, atol=1e-5)
+"""测试加法操作"""
+x = torch.randn(100, 100, device='npu')
+y = torch.randn(100, 100, device='npu')
+
+z = x + y
+
+# 验证正确性（与 CPU 对比）
+x_cpu = x.cpu()
+y_cpu = y.cpu()
+z_cpu = x_cpu + y_cpu
+
+torch.testing.assert_close(z.cpu(), z_cpu, rtol=1e-5, atol=1e-5)
 
 def test_matmul():
-    """测试矩阵乘法"""
-    x = torch.randn(128, 256, device='npu')
-    y = torch.randn(256, 512, device='npu')
-    
-    z = torch.mm(x, y)
-    
-    # 验证
-    z_cpu = torch.mm(x.cpu(), y.cpu())
-    torch.testing.assert_close(z.cpu(), z_cpu, rtol=1e-4, atol=1e-4)
+"""测试矩阵乘法"""
+x = torch.randn(128, 256, device='npu')
+y = torch.randn(256, 512, device='npu')
+
+z = torch.mm(x, y)
+
+# 验证
+z_cpu = torch.mm(x.cpu(), y.cpu())
+torch.testing.assert_close(z.cpu(), z_cpu, rtol=1e-4, atol=1e-4)
 
 def test_nn_module():
-    """测试神经网络模块"""
-    model = torch.nn.Sequential(
-        torch.nn.Linear(128, 256),
-        torch.nn.ReLU(),
-        torch.nn.Linear(256, 10)
-    ).to('npu')
-    
-    x = torch.randn(32, 128, device='npu')
-    output = model(x)
-    
-    assert output.device.type == 'npu'
-    assert output.shape == (32, 10)
+"""测试神经网络模块"""
+model = torch.nn.Sequential(
+torch.nn.Linear(128, 256),
+torch.nn.ReLU(),
+torch.nn.Linear(256, 10)
+).to('npu')
+
+x = torch.randn(32, 128, device='npu')
+output = model(x)
+
+assert output.device.type == 'npu'
+assert output.shape == (32, 10)
 
 def test_compile():
-    """测试 torch.compile"""
-    model = torch.nn.Linear(128, 64).to('npu')
-    compiled_model = torch.compile(model)
-    
-    x = torch.randn(16, 128, device='npu')
-    
-    # 预热
-    _ = compiled_model(x)
-    
-    # 测试
-    output = compiled_model(x)
-    assert output.device.type == 'npu'
-    assert output.shape == (16, 64)
+"""测试 torch.compile"""
+model = torch.nn.Linear(128, 64).to('npu')
+compiled_model = torch.compile(model)
+
+x = torch.randn(16, 128, device='npu')
+
+# 预热
+_ = compiled_model(x)
+
+# 测试
+output = compiled_model(x)
+assert output.device.type == 'npu'
+assert output.shape == (16, 64)
 
 if __name__ == '__main__':
-    pytest.main([__file__])
+pytest.main([__file__])
 ```
 
 ### 7.4 实际应用示例
@@ -864,19 +867,19 @@ input_data = torch.randn(1, 3, 224, 224, device='npu')
 
 # 预热
 with torch.no_grad():
-    for _ in range(10):
-        _ = compiled_model(input_data)
+for _ in range(10):
+_ = compiled_model(input_data)
 
 # 性能测试
 import time
 times = []
 
 with torch.no_grad():
-    for _ in range(100):
-        start = time.time()
-        output = compiled_model(input_data)
-        torch.npu.synchronize()  # 等待 NPU 完成
-        times.append(time.time() - start)
+for _ in range(100):
+start = time.time()
+output = compiled_model(input_data)
+torch.npu.synchronize() # 等待 NPU 完成
+times.append(time.time() - start)
 
 print(f"平均推理时间: {sum(times)/len(times)*1000:.2f}ms")
 print(f"吞吐量: {100/sum(times):.2f} FPS")
@@ -893,53 +896,53 @@ import torch
 import torch_npu
 
 class NPUProfiler:
-    """NPU 性能分析器"""
-    
-    def __init__(self):
-        self.events = []
-    
-    def __enter__(self):
-        self.start_event = torch.npu.Event(enable_timing=True)
-        self.end_event = torch.npu.Event(enable_timing=True)
-        self.start_event.record()
-        return self
-    
-    def __exit__(self, *args):
-        self.end_event.record()
-        torch.npu.synchronize()
-        elapsed = self.start_event.elapsed_time(self.end_event)
-        print(f"NPU 执行时间: {elapsed:.2f}ms")
+"""NPU 性能分析器"""
+
+def __init__(self):
+self.events = []
+
+def __enter__(self):
+self.start_event = torch.npu.Event(enable_timing=True)
+self.end_event = torch.npu.Event(enable_timing=True)
+self.start_event.record()
+return self
+
+def __exit__(self, *args):
+self.end_event.record()
+torch.npu.synchronize()
+elapsed = self.start_event.elapsed_time(self.end_event)
+print(f"NPU 执行时间: {elapsed:.2f}ms")
 
 # 使用
 with NPUProfiler():
-    output = model(input_data)
+output = model(input_data)
 ```
 
 ### 8.2 正确性验证
 
 ```python
 def verify_correctness(npu_output, cpu_output, rtol=1e-3, atol=1e-3):
-    """验证 NPU 输出的正确性"""
-    
-    try:
-        torch.testing.assert_close(
-            npu_output.cpu(),
-            cpu_output,
-            rtol=rtol,
-            atol=atol
-        )
-        print("✓ 正确性验证通过")
-        return True
-    except AssertionError as e:
-        print(f"✗ 正确性验证失败: {e}")
-        
-        # 详细分析差异
-        diff = (npu_output.cpu() - cpu_output).abs()
-        print(f"  最大误差: {diff.max().item()}")
-        print(f"  平均误差: {diff.mean().item()}")
-        print(f"  误差 > rtol 的元素比例: {(diff > rtol).float().mean().item()}")
-        
-        return False
+"""验证 NPU 输出的正确性"""
+
+try:
+torch.testing.assert_close(
+npu_output.cpu(),
+cpu_output,
+rtol=rtol,
+atol=atol
+)
+print(" 正确性验证通过")
+return True
+except AssertionError as e:
+print(f" 正确性验证失败: {e}")
+
+# 详细分析差异
+diff = (npu_output.cpu() - cpu_output).abs()
+print(f" 最大误差: {diff.max().item()}")
+print(f" 平均误差: {diff.mean().item()}")
+print(f" 误差 > rtol 的元素比例: {(diff > rtol).float().mean().item()}")
+
+return False
 ```
 
 ## 9. 最佳实践
@@ -948,28 +951,28 @@ def verify_correctness(npu_output, cpu_output, rtol=1e-3, atol=1e-3):
 
 ```
 1. 需求分析
-   - 确定需要支持的模型
-   - 列出需要的算子
+- 确定需要支持的模型
+- 列出需要的算子
 
 2. 核心算子实现
-   - 实现最常用的 20-30 个算子
-   - 验证正确性
+- 实现最常用的 20-30 个算子
+- 验证正确性
 
 3. 基础测试
-   - 单元测试每个算子
-   - 集成测试简单模型
+- 单元测试每个算子
+- 集成测试简单模型
 
 4. 编译优化
-   - 实现自定义后端
-   - 添加算子融合
+- 实现自定义后端
+- 添加算子融合
 
 5. 性能优化
-   - 自动调优
-   - 特定模型优化
+- 自动调优
+- 特定模型优化
 
 6. 大规模验证
-   - 测试主流模型（ResNet, BERT, GPT）
-   - 性能对比
+- 测试主流模型（ResNet, BERT, GPT）
+- 性能对比
 ```
 
 ### 9.2 性能目标
@@ -996,29 +999,29 @@ def verify_correctness(npu_output, cpu_output, rtol=1e-3, atol=1e-3):
 ### 9.3 常见陷阱
 
 ```python
-# ❌ 陷阱 1：忘记同步
+# 陷阱 1：忘记同步
 output = model(input)
-time = get_time()  # 错误：NPU 可能还没完成
-# ✅ 正确
+time = get_time() # 错误：NPU 可能还没完成
+# 正确
 output = model(input)
 torch.npu.synchronize()
 time = get_time()
 
-# ❌ 陷阱 2：频繁的 CPU-NPU 数据传输
+# 陷阱 2：频繁的 CPU-NPU 数据传输
 for i in range(1000):
-    x = x.cpu().numpy()  # 传输开销巨大
-    # process x
-    x = torch.from_numpy(x).to('npu')
+x = x.cpu().numpy() # 传输开销巨大
+# process x
+x = torch.from_numpy(x).to('npu')
 
-# ✅ 正确：尽量在 NPU 上完成所有操作
+# 正确：尽量在 NPU 上完成所有操作
 
-# ❌ 陷阱 3：没有预热
+# 陷阱 3：没有预热
 # 第一次调用可能很慢（编译、初始化）
-time = benchmark(model, input)  # 不准确
+time = benchmark(model, input) # 不准确
 
-# ✅ 正确：预热
+# 正确：预热
 for _ in range(10):
-    model(input)
+model(input)
 time = benchmark(model, input)
 ```
 
@@ -1027,23 +1030,23 @@ time = benchmark(model, input)
 ### 核心要点
 
 1. **三种适配方式：**
-   - Dispatcher 层：快速原型
-   - 自定义后端：完整优化
-   - Inductor 集成：深度集成
+- Dispatcher 层：快速原型
+- 自定义后端：完整优化
+- Inductor 集成：深度集成
 
 2. **关键步骤：**
-   - 设备注册
-   - 算子实现
-   - 编译优化
-   - 性能调优
+- 设备注册
+- 算子实现
+- 编译优化
+- 性能调优
 
 3. **必备算子：** 20-30 个核心算子覆盖 80% 场景
 
 4. **优化技术：**
-   - 算子融合
-   - 内存布局优化
-   - 自动调优
-   - 批处理优化
+- 算子融合
+- 内存布局优化
+- 自动调优
+- 批处理优化
 
 ### 实施路线图
 
@@ -1074,18 +1077,18 @@ time = benchmark(model, input)
 
 ---
 
-## 🎓 总结
+## 总结
 
 恭喜！你已经完成了 PyTorch 2.0 核心技术栈的学习之旅：
 
-1. ✅ **PyTorch 2.0 特性** - 整体架构和 torch.compile
-2. ✅ **TorchScript** - 早期的静态图方案
-3. ✅ **TorchFX** - 灵活的图表示和变换
-4. ✅ **Lazy Tensor** - 延迟执行机制
-5. ✅ **Torch Dynamo** - 字节码捕获技术
-6. ✅ **AOTAutograd** - 提前编译的自动微分
-7. ✅ **PyTorch Dispatcher** - 多后端分发机制
-8. ✅ **国产芯片适配** - 实战应用
+1. **PyTorch 2.0 特性** - 整体架构和 torch.compile
+2. **TorchScript** - 早期的静态图方案
+3. **TorchFX** - 灵活的图表示和变换
+4. **Lazy Tensor** - 延迟执行机制
+5. **Torch Dynamo** - 字节码捕获技术
+6. **AOTAutograd** - 提前编译的自动微分
+7. **PyTorch Dispatcher** - 多后端分发机制
+8. **国产芯片适配** - 实战应用
 
 现在你已经具备了：
 - 深入理解 PyTorch 2.0 的编译栈
@@ -1097,5 +1100,5 @@ time = benchmark(model, input)
 2. 参考开源项目学习更多细节
 3. 加入 PyTorch 社区贡献代码
 
-祝你在 PyTorch 和深度学习的道路上越走越远！🚀
+祝你在 PyTorch 和深度学习的道路上越走越远！
 
